tests/invalid/syntax/func_missing_arrow.nyx
// INVALID: Missing -> in function signature return type
// Expected parse error: -> required before return type annotation
func bad() ok
    pass
